# ns_projects

./: .gitignore  README.md  connect_ns  diagnose.sh  fix_deploy.sh  fix_service.sh  prep_server.sh  setup_nginx.sh
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: agent.py  auth.py  companies.py  products.py  staff.py  users.py
app/core/: dependencies.py  security.py
app/db/: base.py  session.py
app/models/: __init__.py  agent.py  crm.py  tenant.py  user.py
app/schemas/: crm.py  tenant.py  user.py
app/services/agent/: orchestrator.py  tools.py
migrations/: env.py
ns_base/: .env.example  main.py  requirements.txt
ns_base/api/v1/: router.py
ns_base/core/: config.py  dependencies.py  security.py
ns_base/db/: session.py
ns_base/docker/: Dockerfile
ns_base/frontend/: dashboard.html  register.html
ns_base/middleware/: tenant.py
ns_base/migrations/: env.py
ns_base/models/: __init__.py  agent.py  tenant.py  user.py
ns_base/schemas/: auth.py  tenant.py  user.py
ns_base/services/agent/: orchestrator.py  tools.py
ns_crm/: alembic.ini  main.py  pyproject.toml
ns_crm/api/v1/: router.py
ns_crm/api/v1/endpoints/: agent.py  auth.py  products.py  users.py
ns_crm/core/: dependencies.py  security.py
ns_crm/db/: session.py
ns_crm/docker/: docker-compose.yml
ns_crm/frontend/: dashboard.html  login.html
ns_crm/migrations/: env.py
ns_crm/models/: __init__.py  agent.py  crm.py  tenant.py  user.py
ns_crm/schemas/: agent.py  crm.py  tenant.py  user.py
ns_crm/services/agent/: orchestrator.py  tools.py
(+4 files in other folders)
